--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "fs": "^0.0.1-security",
+    "googleapis": "27",
     "morgan": "^1.9.0",
     "querystring": "^0.2.0",
+    "readline": "^1.3.0",
     "request": "^2.88.0"
   }
 }
