--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.9.0",
     "querystring": "^0.2.0",
     "readline": "^1.3.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "universal-analytics": "^0.4.17"
   }
 }
