--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.3",
     "fs": "^0.0.1-security",
     "googleapis": "27",
+    "mongoose": "^5.2.14",
     "morgan": "^1.9.0",
     "querystring": "^0.2.0",
     "readline": "^1.3.0",
