--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "description": "app to integrate slack with analytics",
   "main": "index.js",
-  "author": "Lazaro Alvarenga <lazaroalvarenga@email.com>",
   "license": "ISC",
   "scripts": {
-    "start:dev": "nodemon --exec babel-node index.js",
-    "start": "babel-node index.js"
+    "start": "if-env NODE_ENV=production ?? npm run start:prod || npm run start:dev",
+    "start:prod": "babel-node index.js",
+    "start:dev": "set NODE_ENV=development && nodemon --exec babel-node index.js"
   },
   "dependencies": {
     "@slack/client": "^4.6.0",
@@ -15,9 +15,11 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "fs": "^0.0.1-security",
     "googleapis": "27",
+    "if-env": "^1.0.4",
     "morgan": "^1.9.0",
     "querystring": "^0.2.0",
     "readline": "^1.3.0",
