--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@slack/client": "^4.6.0",
     "@slack/events-api": "^2.1.0",
+    "async-request": "^1.2.0",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "body-parser": "^1.18.3",
@@ -19,9 +20,9 @@
     "fs": "^0.0.1-security",
     "googleapis": "27",
     "morgan": "^1.9.0",
+    "pug": "^2.0.3",
     "querystring": "^0.2.0",
     "readline": "^1.3.0",
-    "request": "^2.88.0",
     "universal-analytics": "^0.4.17"
   },
   "devDependencies": {
