--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "body-parser": "^1.18.3",
-    "dotenv": "^6.0.0",
     "config-yml": "^0.10.2",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "fs": "^0.0.1-security",
     "googleapis": "27",
-    "mongoose": "^5.2.14",
     "if-env": "^1.0.4",
+    "mongoose": "^5.2.14",
     "morgan": "^1.9.0",
+    "node-sass-middleware": "^0.11.0",
     "pug": "^2.0.3",
     "querystring": "^0.2.0",
     "readline": "^1.3.0",
