--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@slack/events-api": "^2.1.0",
     "async-request": "^1.2.0",
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "body-parser": "^1.18.3",
     "config-yml": "^0.10.2",
