--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "pug": "^2.0.3",
     "querystring": "^0.2.0",
     "readline": "^1.3.0",
-    "universal-analytics": "^0.4.17"
+    "universal-analytics": "^0.4.17",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
