--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,14 @@
 {
   "extends": [ "eslint:recommended" ],
+  "parser": "babel-eslint",
   "env": {
     "es6": true,
     "node": true,
-    "browser": true,
-    "plugins": [],
-    "parserOptions": {
-      "ecmaVersion": 6,
-      "sourceType": "module"
-    }
+    "browser": true
   },
   "rules": {
-
+    "strict": 0,
+    "no-console": "off",
+    "indent-size": [ true, 2 ]
   }
 }
