--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
     "querystring": "^0.2.0",
     "readline": "^1.3.0",
     "universal-analytics": "^0.4.17",
-    "winston": "^3.1.0"
-  },
-  "devDependencies": {
-    "eslint-plugin-prettier": "^2.6.2",
+    "winston": "^3.1.0",
     "prettier": "^1.14.3",
     "babel-eslint": "^9.0.0",
-    "eslint": "^5.6.0",
+    "eslint-plugin-prettier": "^2.6.2",
+    "eslint": "^5.6.0"
+  },
+  "devDependencies": {
     "nodemon": "^1.18.4"
   }
 }
