--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
     "async-request": "^1.2.0",
     "autoprefixer": "^9.1.5",
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^9.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "config-yml": "^0.10.2",
     "dotenv": "^6.0.0",
+    "eslint": "^5.6.0",
+    "eslint-plugin-prettier": "^2.6.2",
     "express": "^4.16.3",
     "fs": "^0.0.1-security",
     "googleapis": "27",
@@ -45,17 +48,15 @@
     "morgan": "^1.9.0",
     "node-sass-middleware": "^0.11.0",
     "postcss-middleware": "^1.1.4",
+    "prettier": "^1.14.3",
     "pug": "^2.0.3",
     "querystring": "^0.2.0",
     "readline": "^1.3.0",
     "universal-analytics": "^0.4.17",
-    "winston": "^3.1.0",
-    "prettier": "^1.14.3",
-    "babel-eslint": "^9.0.0",
-    "eslint-plugin-prettier": "^2.6.2",
-    "eslint": "^5.6.0"
+    "winston": "^3.1.0"
   },
   "devDependencies": {
+    "ghooks": "^2.0.4",
     "nodemon": "^1.18.4"
   },
   "config": {
