Parse api data to ranking & profile views

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,8 @@
   "env": {
     "es6": true,
     "node": true,
-    "browser": true
+    "browser": true,
+    "jest": true
   },
   "rules": {
     "strict": 0,
