--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-eslint": "^9.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "body-parser": "^1.18.3",
     "config-yml": "^0.10.2",
     "dotenv": "^6.0.0",
     "eslint": "^5.6.0",
