Move slackId for feedback messages to .env variable

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ SLACK_TOKEN=xoxp-439439624196-439047899505-441042162582-c842be288a52dfd3af61d6ce
 GA=
 MONGODB_URI=mongodb://localhost/atena
 CHANNELS=CCWSMJZ6U CCXCXJWBW
+SLACK_USER_FEEDBACK=UCJA2A8Q5
