--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-preset-env": "^1.7.0",
     "body-parser": "^1.18.3",
     "config-yml": "^0.10.2",
+    "cron": "^1.4.1",
     "dotenv": "^6.0.0",
     "eslint": "^5.6.0",
     "eslint-plugin-prettier": "^2.6.2",
