--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "fs": "^0.0.1-security",
     "googleapis": "27",
     "if-env": "^1.0.4",
+    "moment": "^2.22.2",
     "mongoose": "^5.2.14",
     "morgan": "^1.9.0",
     "node-sass-middleware": "^0.11.0",
