--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "if-env": "^1.0.4",
     "mongoose": "^5.2.14",
     "morgan": "^1.9.0",
+    "node-cron": "^2.0.1",
     "node-sass-middleware": "^0.11.0",
     "postcss-middleware": "^1.1.4",
     "prettier": "^1.14.3",
