Updated dependencies to the latest version. - "ajv": "5.5.2" to "6.5.3" - "babel-eslint": "^9.0.0" to "10.0.1" - "eslint-plugin-prettier": "^2.6.2" to "3.0.0" - "googleapis": "27" to "34.0.0"

--- a/package.json
+++ b/package.json
@@ -30,20 +30,21 @@
   "dependencies": {
     "@slack/client": "^4.6.0",
     "@slack/events-api": "^2.1.0",
+    "ajv": "6.5.3",
     "async-request": "^1.2.0",
     "autoprefixer": "^9.1.5",
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^9.0.0",
+    "babel-eslint": "10.0.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "body-parser": "^1.18.3",
     "config-yml": "^0.10.2",
     "dotenv": "^6.0.0",
     "eslint": "^5.6.0",
-    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-prettier": "3.0.0",
     "express": "^4.16.3",
     "fs": "^0.0.1-security",
-    "googleapis": "27",
+    "googleapis": "34.0.0",
     "if-env": "^1.0.4",
     "moment": "^2.22.2",
     "mongoose": "^5.2.14",
