Update valid channels on the game

--- a/config/channels.yml
+++ b/config/channels.yml
@@ -3,3 +3,23 @@ valid_channels:
   - C7ZD2TMAM
   - CAVQP51DW
   - C8TSV1VJ5
+  - CDNGW796X
+  - C8WEY5FDG
+  - C8WJE0MQD
+  - C8XGMU79V
+  - CCG1P97HS
+  - C8VU7CDL1
+  - C8WC0G4D9
+  - C8WEJ77C4
+  - C8VU6UZ2M
+  - C8XALFB46
+  - CAXDRTBV3
+  - CDP36K52A
+  - CCDDMADK3
+  - CCZUDN0J0
+  - C8XANSE3Y
+  - C8VU8541X
+  - CCRF2HR8A
+  - C8VR6FBME
+  - CD88J4WJ3
+  - CCRLKDKAR
