Adicionando o commando expose no package.json e adicionando o localtunnel como lib de desenvolvimento.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "start:prod": "babel-node index.js",
     "start:dev": "npm run format && set NODE_ENV=development && nodemon --exec babel-node index.js",
     "lint": "npm run format && eslint \"**/*.js\" --ignore-pattern node_modules/",
-    "test": "npm run lint"
+    "test": "npm run lint",
+    "expose": "node_modules/.bin/lt -s atena-$USER -p 4390"
   },
   "dependencies": {
     "@slack/client": "^4.6.0",
@@ -62,6 +63,7 @@
   "devDependencies": {
     "ghooks": "^2.0.4",
     "jest": "^23.6.0",
+    "localtunnel": "^1.9.1",
     "nodemon": "^1.18.4",
     "supertest": "^3.3.0"
   },
