add more members into core team

--- a/config/coreteam.yml
+++ b/config/coreteam.yml
@@ -16,6 +16,9 @@ members:
   - U90418USW
   - UATDAFP9T
   - UCV6RPQRL
+  - UCLFL0K2A
+  - UD65U3S1H
+  - UCVTS7KPU
 admins:
   - UB348CP6Z
   - UCJA2A8Q5
