add test to model user

--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "start": "babel-node index.js",
     "start:prod": "babel-node index.js",
     "start:dev": "npm run format && set NODE_ENV=development && nodemon --exec babel-node index.js",
-    "lint": "npm run format && eslint \"**/*.js\" --ignore-pattern node_modules/",
-    "test": "npm run lint"
+    "lint": "npm run format && eslint \"**/*.js\" --ignore-pattern node_modules/ --ignore-pattern coverage/",
+    "test": "npm run lint",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@slack/client": "^4.6.0",
