Add start debug mode

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "format": "prettier --write \"**/*.js\"",
     "start": "babel-node index.js",
     "start:prod": "babel-node index.js",
-    "start:dev": "npm run format && set NODE_ENV=development && nodemon --exec babel-node --inspect-brk index.js",
+    "start:dev": "npm run format && set NODE_ENV=development && nodemon --exec babel-node index.js",
+    "start:dev:debug": "npm run format && set NODE_ENV=development && nodemon --exec babel-node --inspect-brk index.js",
     "lint": "npm run format && eslint \"**/*.js\" --ignore-pattern node_modules/ --ignore-pattern coverage/",
     "test": "npm run lint",
     "test:coverage": "jest --coverage"
