--- a/package.json
+++ b/package.json
@@ -63,9 +63,12 @@
     "winston": "^3.1.0"
   },
   "devDependencies": {
+    "factory-girl": "^5.0.4",
     "ghooks": "^2.0.4",
     "jest": "^23.6.0",
     "nodemon": "^1.18.7",
+    "sinon": "^7.1.1",
+    "sinon-mongoose": "^2.2.1",
     "supertest": "^3.3.0"
   },
   "config": {
