--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@slack/events-api": "^2.1.0",
     "ajv": "6.5.3",
     "autoprefixer": "^9.1.5",
+    "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-eslint": "10.0.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
