Change achievements to config

--- a/config/categories.yml
+++ b/config/categories.yml
@@ -1,8 +1,8 @@
-network: 'Network'
-team: 'Team'
-academy: 'Academy'
-mentoring: 'Mentoring'
-meetups: 'Meetups'
-research: 'Research'
-nucleos: 'Núcleos'
-missoes: 'Missões'
+network: 'network'
+team: 'team'
+academy: 'academy'
+mentoring: 'mentoring'
+meetups: 'meetups'
+research: 'research'
+nucleos: 'nucleos'
+missoes: 'missoes'
