--- a/config/categories.yml
+++ b/config/categories.yml
@@ -1,8 +1,24 @@
-network: 'network'
-team: 'team'
-academy: 'academy'
-mentoring: 'mentoring'
-meetups: 'meetups'
-research: 'research'
-nucleos: 'nucleos'
-missoes: 'missoes'
+network:
+  name: 'Network'
+  type: 'network'
+team:
+  name: 'Team'
+  type: 'team'
+academy:
+  name: 'Academy'
+  type: 'academy'
+mentoring:
+  name: 'Mentoring'
+  type: 'mentoring'
+meetups:
+  name: 'Meetups'
+  type: 'meetups'
+research:
+  name: 'Research'
+  type: 'research'
+nucleos:
+  name: 'Núcleos'
+  type: 'nucleos'
+missoes:
+  name: 'Missões'
+  type: 'missoes'
