--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "test:watch": "set NODE_ENV=test && jest --watch --onlyChanged --forceExit --detectOpenHandles"
   },
   "dependencies": {
+    "@rocket.chat/sdk": "^0.2.9",
     "@slack/client": "^4.6.0",
     "@slack/events-api": "^2.1.0",
     "ajv": "6.5.3",
