--- a/config/achievements.yml
+++ b/config/achievements.yml
@@ -26,3 +26,31 @@ network:
           I: 3
           II: 4
         xp: 10
+  message:
+    sended:
+      bronze:
+        name: 'Bronze'
+        ranges:
+          I: 1
+          II: 2
+        xp: 5
+      prata:
+        name: 'Prata'
+        ranges:
+          I: 3
+          II: 4
+        xp: 10
+  thread:
+    received:
+      bronze:
+        name: 'Bronze'
+        ranges:
+          I: 1
+          II: 2
+        xp: 5
+      prata:
+        name: 'Prata'
+        ranges:
+          I: 3
+          II: 4
+        xp: 10
