--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,8 @@ SLACK_USER_FEEDBACK=
 ROCKET_HOST=
 ROCKET_BOT_USER=
 ROCKET_BOT_PASS=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_REPOSITORIES=
+DISQUS_PUBLIC_KEY=
+DISQUS_CALLBACK_URL=
