--- a/package.json
+++ b/package.json
@@ -47,15 +47,18 @@
     "eslint": "^5.6.0",
     "eslint-plugin-prettier": "3.0.0",
     "express": "^4.16.3",
+    "filereader": "^0.10.3",
     "fs": "^0.0.1-security",
     "googleapis": "34.0.0",
     "if-env": "^1.0.4",
     "make-requests": "^0.1.2",
+    "mime-types": "^2.1.21",
     "moment": "^2.22.2",
     "mongoose": "^5.2.14",
     "morgan": "^1.9.0",
     "node-cron": "^2.0.3",
     "node-sass-middleware": "^0.11.0",
+    "path": "^0.12.7",
     "postcss-middleware": "^1.1.4",
     "prettier": "^1.14.3",
     "pug": "^2.0.3",
