--- a/config/coreteam.yml
+++ b/config/coreteam.yml
@@ -10,7 +10,6 @@ members:
   - UB2ELL480
   - UAWNQHH38
   - U89DXTF6W
-  - UASHT1H7U
   - UBV9QPYP9
   - UCS9EMKG9
   - U90418USW
@@ -18,7 +17,8 @@ members:
   - UCV6RPQRL
   - UCLFL0K2A
   - UD65U3S1H
-  - UCVTS7KPU
+  - UC58Q0XNZ
+  - UEKFHKXTJ
+  - UBL9Z3PJ9  
 admins:
-  - UB348CP6Z
   - UCJA2A8Q5
