add normalize score to interaction

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,8 @@ SLACK_USER_FEEDBACK=
 ROCKET_HOST=
 ROCKET_BOT_USER=
 ROCKET_BOT_PASS=
+ROCKET_USER_TOKEN=
+ROCKET_USER_ID=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_REPOSITORIES=
@@ -16,3 +18,4 @@ DISQUS_PUBLIC_KEY=
 DISQUS_CALLBACK_URL=
 DISQUS_SECRET_KEY=
 DISQUS_ACCESS_TOKEN=
+ROCKET_DEFAULT_CHANNEL=
