--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "googleapis": "34.0.0",
     "if-env": "^1.0.4",
     "make-requests": "^0.1.2",
-    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.23",
     "mongoose": "^5.2.14",
     "morgan": "^1.9.0",
     "node-cron": "^2.0.3",
