--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,6 @@
 {
-  "presets": ["env"],
-  "plugins": ["transform-object-rest-spread"]
+  "presets": ["env", "es2015", "react"],
+  "plugins": [
+    "transform-object-rest-spread"
+  ]
 }
