--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
-  "plugins": ["prettier"],
-  "extends": [ "eslint:recommended" ],
+  "plugins": [ "prettier", "react" ],
+  "extends": [ "eslint:recommended", "plugin:react/recommended" ],
   "parser": "babel-eslint",
   "env": {
     "es6": true,
