--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "test:watch": "set NODE_ENV=test && jest --watch --onlyChanged --forceExit --detectOpenHandles"
   },
   "dependencies": {
+    "@rebass/grid": "^6.0.0-7",
     "@rocket.chat/sdk": "^0.2.9",
     "@slack/client": "^4.6.0",
     "@slack/events-api": "^2.1.0",
@@ -45,6 +46,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
+    "compression": "^1.7.3",
     "config-yml": "^0.10.2",
     "dotenv": "^6.0.0",
     "eslint": "^5.6.0",
