--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,17 @@
 {
   "presets": ["env", "es2015", "react"],
   "plugins": [
-    "transform-object-rest-spread"
+    "transform-object-rest-spread",
+    [
+      "module-resolver",
+      {
+        "root": ["./client"],
+        "alias": {
+          "assets": "./client/assets",
+          "components": "./client/components",
+          "styles": "./client/styles"
+        }
+      }
+    ]
   ]
 }
