--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "universal-analytics": "^0.4.17"
   },
   "devDependencies": {
+    "babel-plugin-module-resolver": "^3.1.3",
     "eslint-plugin-react": "^7.12.4",
     "factory-girl": "^5.0.4",
     "ghooks": "^2.0.4",
