--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint": "^5.6.0",
     "eslint-plugin-prettier": "3.0.0",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "filereader": "^0.10.3",
     "fs": "^0.0.1-security",
     "googleapis": "34.0.0",
@@ -65,6 +66,8 @@
     "mongoose": "^5.2.14",
     "morgan": "^1.9.0",
     "node-cron": "^2.0.3",
+    "passport": "^0.4.0",
+    "passport-linkedin-oauth2": "^1.6.1",
     "path": "^0.12.7",
     "prettier": "^1.14.3",
     "prop-types": "^15.6.2",
