--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "lint": "npm run format && eslint \"**/*.js\" --ignore-pattern node_modules/ --ignore-pattern coverage/",
     "test:coverage": "set NODE_ENV=test && jest --coverage --forceExit --detectOpenHandles",
     "test": "set NODE_ENV=test  && jest --forceExit --detectOpenHandles",
-    "test:watch": "set NODE_ENV=test && jest --watch --onlyChanged --forceExit --detectOpenHandles"
+    "test:watch": "set NODE_ENV=test && jest --watch --onlyChanged --forceExit --detectOpenHandles",
+    "lint-md": "remark ."
+  },
+  "remarkConfig": {
+    "plugins": ["remark-preset-lint-recommended"]
   },
   "dependencies": {
     "@rebass/grid": "^6.0.0-7",
@@ -55,6 +59,7 @@
     "express-session": "^1.15.6",
     "filereader": "^0.10.3",
     "fs": "^0.0.1-security",
+    "global": "^4.3.2",
     "googleapis": "34.0.0",
     "if-env": "^1.0.4",
     "make-requests": "^0.1.2",
@@ -83,6 +88,8 @@
     "babel-plugin-module-resolver": "^3.1.3",
     "eslint-plugin-react": "^7.12.4",
     "factory-girl": "^5.0.4",
+    "remark-cli": "^6.0.1",
+    "remark-preset-lint-recommended": "^3.0.2",
     "ghooks": "^2.0.4",
     "jest": "^23.6.0",
     "nodemon": "^1.18.7",
