--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,8 @@ ROCKET_USER_ID=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_REPOSITORIES=
+GITHUB_OAUTH_URL=https://github.com/login/oauth/
+GITHUB_API_URL=https://api.github.com/
 DISQUS_PUBLIC_KEY=
 DISQUS_CALLBACK_URL=
 DISQUS_SECRET_KEY=
@@ -26,3 +28,6 @@ ROCKETCHAT_URL=
 ROCKETCHAT_USE_SSL=true
 TEAM_ATENA_TOKEN=
 X_MINER_TOKEN=
+LINKEDIN_KEY=
+LINKEDIN_SECRET=
+ATENA_SOURCE_URL=https://github.com/impulsonetwork/atena
