add env linkedin url callback

--- a/.env.example
+++ b/.env.example
@@ -30,4 +30,5 @@ TEAM_ATENA_TOKEN=
 X_MINER_TOKEN=
 LINKEDIN_KEY=
 LINKEDIN_SECRET=
+LINKEDIN_URL_CALLBACK=
 ATENA_SOURCE_URL=https://github.com/impulsonetwork/atena
