set ga to required false

--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
       "required": true
     },
     "GA": {
-      "required": true
+      "required": false
     },
     "GITHUB_CLIENT_ID": {
       "required": true
