--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-eslint": "10.0.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
+    "batchflow": "^0.4.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "config-yml": "^0.10.2",
