--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "global": "^4.3.2",
     "googleapis": "34.0.0",
     "if-env": "^1.0.4",
+    "lodash": "^4.17.11",
+    "log4js": "^4.1.0",
     "mime-types": "^2.1.21",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
