--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@slack/events-api": "^2.1.0",
     "ajv": "6.5.3",
     "amqplib": "^0.5.3",
+    "amqplib-as-promised": "^3.15.1",
     "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
