--- a/package.json
+++ b/package.json
@@ -91,8 +91,8 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/node": "^7.2.2",
     "@babel/core": "^7.3.4",
+    "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
     "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.4",
@@ -102,6 +102,8 @@
     "factory-girl": "^5.0.4",
     "ghooks": "^2.0.4",
     "jest": "^24.1.0",
+    "mockdate": "^2.0.2",
+    "mockingoose": "^2.13.0",
     "mongodb-memory-server": "^3.1.2",
     "nodemon": "^1.18.7",
     "remark-cli": "^6.0.1",
