--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@rocket.chat/sdk": "^0.2.9",
     "@slack/client": "^4.6.0",
     "@slack/events-api": "^2.1.0",
+    "@sokratis/passport-linkedin-oauth2": "^2.1.0",
     "ajv": "6.5.3",
     "amqplib": "^0.5.3",
     "amqplib-as-promised": "^3.15.1",
@@ -77,7 +78,6 @@
     "morgan": "^1.9.0",
     "node-cron": "^2.0.3",
     "passport": "^0.4.0",
-    "passport-linkedin-oauth2": "^1.6.1",
     "path": "^0.12.7",
     "prettier": "^1.14.3",
     "prop-types": "^15.6.2",
