--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
   "printWidth": 80,
   "tabWidth": 2,
   "singleQuote": false,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "semi": false
 }
