Fixing handlePro and handleFromNext

--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,8 @@ DISQUS_ACCESS_TOKEN=
 ROCKET_DEFAULT_CHANNEL=
 CLOUDAMQP_APIKEY=
 CLOUDAMQP_URL=
-CLOUDMQP_QUEUE=
+CLOUDMQP_QUEUE=atena.in
+CLOUDMQP_QUEUE_OUT=atena.out
 ROCKETCHAT_URL=
 ROCKETCHAT_USE_SSL=true
 TEAM_ATENA_TOKEN=
