--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,7 @@
   "useTabs": false,
   "printWidth": 80,
   "tabWidth": 2,
-  "singleQuote": false,
-  "trailingComma": "none"
+  "singleQuote": true,
+  "trailingComma": "none",
+  "semi": false
 }
