--- a/.env.example
+++ b/.env.example
@@ -34,4 +34,4 @@ LINKEDIN_SECRET=
 LINKEDIN_URL_CALLBACK=
 ATENA_SOURCE_URL=https://github.com/impulsonetwork/atena
 BLOG_API_URL=
-ENABLE_LOGS=true
+ATENA_ENABLE_LOGS=true
