Adding front url

--- a/.env.example
+++ b/.env.example
@@ -33,5 +33,6 @@ LINKEDIN_KEY=
 LINKEDIN_SECRET=
 LINKEDIN_URL_CALLBACK=
 ATENA_SOURCE_URL=https://github.com/impulsonetwork/atena
+ATENA_URL=http://localhost:3000
 BLOG_API_URL=
 ATENA_ENABLE_LOGS=true
