--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
   "presets": [
     [
-      "@babel/preset-env", {
+      "@babel/preset-env",
+      {
         "targets": {
           "node": "current"
         }
@@ -9,18 +10,5 @@
     ],
     "@babel/preset-react"
   ],
-  "plugins": [
-    "@babel/plugin-proposal-object-rest-spread",
-    [
-      "module-resolver",
-      {
-        "root": ["./client"],
-        "alias": {
-          "assets": "./client/assets",
-          "components": "./client/components",
-          "styles": "./client/styles"
-        }
-      }
-    ]
-  ]
+  "plugins": []
 }
