Adding login with linkedin

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,6 @@ ATENA_SOURCE_URL=https://github.com/impulsonetwork/atena
 ATENA_URL=http://localhost:3000
 BLOG_API_URL=
 ATENA_ENABLE_LOGS=true
+LINKEDIN_OAUTH_URL=https://www.linkedin.com/oauth/v2
+LINKEDIN_API_URL=https://api.linkedin.com/v2/me
+ATENA_CRYPTO_SALT=W6v8Z5EUTYVrM
