--- a/package.json
+++ b/package.json
@@ -42,9 +42,6 @@
   "dependencies": {
     "@rebass/grid": "^6.0.0-7",
     "@rocket.chat/sdk": "^0.2.9",
-    "@slack/client": "^4.6.0",
-    "@slack/events-api": "^2.1.0",
-    "@sokratis/passport-linkedin-oauth2": "^2.1.0",
     "ajv": "6.5.3",
     "amqplib": "^0.5.3",
     "amqplib-as-promised": "^3.15.1",
@@ -52,11 +49,12 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
     "batchflow": "^0.4.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "config-yml": "^0.10.2",
+    "cors": "^2.8.5",
+    "crypto-js": "^3.1.9-1",
     "dotenv": "^6.0.0",
     "eslint": "^5.6.0",
     "eslint-plugin-prettier": "3.0.0",
@@ -77,7 +75,6 @@
     "mongoose": "^5.6.1",
     "morgan": "^1.9.0",
     "node-cron": "^2.0.3",
-    "passport": "^0.4.0",
     "path": "^0.12.7",
     "prettier": "^1.14.3",
     "prop-types": "^15.6.2",
