Adding rankings cron

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ DISQUS_PUBLIC_KEY=
 DISQUS_CALLBACK_URL=
 DISQUS_SECRET_KEY=
 DISQUS_ACCESS_TOKEN=
-ROCKET_DEFAULT_CHANNEL=
+ROCKET_DEFAULT_CHANNEL=impulso-network
 CLOUDAMQP_APIKEY=
 CLOUDAMQP_URL=
 CLOUDMQP_QUEUE=atena.in
