--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,19 @@
     "strict": 0,
     "no-console": "off",
     "indent-size": [ true, 2 ],
-    "prettier/prettier": "error"
+    "prettier/prettier": [
+      "error",
+      {
+        "useTabs": false,
+        "printWidth": 80,
+        "tabWidth": 2,
+        "singleQuote": true,
+        "trailingComma": "none",
+        "semi": false
+      },
+      {
+        "usePrettierrc": false
+      }
+    ]
   }
 }
