--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
-  "plugins": [ "prettier", "react" ],
-  "extends": [ "eslint:recommended", "plugin:react/recommended" ],
+  "plugins": ["prettier"],
+  "extends": ["eslint:recommended"],
   "parser": "babel-eslint",
   "env": {
     "es6": true,
@@ -11,7 +11,7 @@
   "rules": {
     "strict": 0,
     "no-console": "off",
-    "indent-size": [ true, 2 ],
+    "indent-size": [true, 2],
     "prettier/prettier": [
       "error",
       {
@@ -21,9 +21,6 @@
         "singleQuote": true,
         "trailingComma": "none",
         "semi": false
-      },
-      {
-        "usePrettierrc": false
       }
     ]
   }
