--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "node": "8.11.4"
   },
   "dependencies": {
-    "@rebass/grid": "^6.0.0-7",
     "@rocket.chat/sdk": "^0.2.9",
     "ajv": "6.5.3",
     "amqplib": "^0.5.3",
@@ -56,8 +55,6 @@
     "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^6.0.0",
-    "eslint": "^5.6.0",
-    "eslint-plugin-prettier": "3.0.0",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "filereader": "^0.10.3",
@@ -68,22 +65,14 @@
     "lodash": "^4.17.11",
     "log4js": "^4.1.0",
     "mime-types": "^2.1.21",
-    "mobx": "^5.9.0",
-    "mobx-react": "^5.4.3",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.23",
     "mongoose": "^5.6.1",
     "morgan": "^1.9.0",
     "node-cron": "^2.0.3",
     "path": "^0.12.7",
-    "prettier": "^1.14.3",
-    "prop-types": "^15.6.2",
     "querystring": "^0.2.0",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
     "readline": "^1.3.0",
-    "styled-components": "^4.1.3",
-    "styled-normalize": "^8.0.4",
     "universal-analytics": "^0.4.17"
   },
   "devDependencies": {
@@ -95,7 +84,9 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "babel-plugin-module-resolver": "^3.1.3",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "factory-girl": "^5.0.4",
     "ghooks": "^2.0.4",
     "jest": "^24.1.0",
@@ -103,6 +94,7 @@
     "mockingoose": "^2.13.0",
     "mongodb-memory-server": "^3.1.2",
     "nodemon": "^1.18.7",
+    "prettier": "^1.18.2",
     "remark-cli": "^6.0.1",
     "remark-preset-lint-recommended": "^3.0.2",
     "sinon": "^7.1.3",
