Changing prettier configs

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,16 +15,6 @@
     "strict": 0,
     "no-console": "off",
     "indent-size": [true, 2],
-    "prettier/prettier": [
-      "error",
-      {
-        "useTabs": false,
-        "printWidth": 80,
-        "tabWidth": 2,
-        "singleQuote": true,
-        "trailingComma": "none",
-        "semi": false
-      }
-    ]
+    "prettier/prettier": "error"
   }
 }
