--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
   "rules": {
     "strict": 0,
     "no-console": "off",
-    "indent-size": [true, 2],
+    "indent-size": 2,
     "prettier/prettier": "error"
   }
 }
