--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,4 @@ LINKEDIN_OAUTH_URL=https://www.linkedin.com/oauth/v2
 LINKEDIN_API_URL=https://api.linkedin.com/v2
 LINKEDIN_URL_CALLBACK=http://localhost:3000/linkedin
 ATENA_CRYPTO_SALT=W6v8Z5EUTYVrM
+ATENA_EXPIRE_TOKEN=20
