--- a/app.json
+++ b/app.json
@@ -61,6 +61,9 @@
     },
     "X_MINER_TOKEN": {
       "required": true
+    },
+    "ATENA_EXPIRE_TOKEN": {
+      "required": true
     }
   },
   "formation": {
