--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
   "rules": {
     "strict": 0,
     "no-console": "off",
-    "indent": ["error", 2],
+    "indent": [2, 2],
     "indent-size": 2,
     "prettier/prettier": "error"
   }
