--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,8 +14,10 @@
   "rules": {
     "strict": 0,
     "no-console": "off",
-    "indent": [2, 2],
-    "indent-size": 2,
+    "indent": ["error", 2, {
+      "ImportDeclaration": "first",
+      "MemberExpression": "off"
+    }],
     "prettier/prettier": "error"
   }
 }
