--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "singleQuote": true,
   "trailingComma": "none",
   "semi": false,
-  "parser": "babel"
+  "parser": "babel",
+  "bracketSpacing": true
 }
