--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,12 @@
   "extends": ["prettier"],
   "parser": "babel-eslint",
   "parserOptions": {
-    "sourceType": "module"
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "modules": true,
+      "experimentalObjectRestSpread": true
+    }
   },
   "env": {
     "es6": true,
@@ -16,9 +21,11 @@
     "no-console": "off",
     "indent": ["error", 2, {
       "ImportDeclaration": "first",
-      "MemberExpression": "off",
+      "MemberExpression": 1,
       "SwitchCase": 0
     }],
     "prettier/prettier": "error"
   }
 }
+
+
