Update azure-pipelines.yml for Azure Pipelines
Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,11 +1,18 @@
+trigger:
+- master
+- dev
+
 pool:
-  vmImage: 'ubuntu-16.04'
+  vmImage: 'ubuntu-latest'
+
 strategy:
   matrix:
     node_8_x:
       node_version: 8.x
     node_9_x:
       node_version: 9.x
+    node_10_x:
+      node_version: 10.x
 
 steps:
 - task: NodeTool@0 
