Add rocketchat user envs to example

--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,5 @@ LINKEDIN_API_URL=https://api.linkedin.com/v2
 LINKEDIN_URL_CALLBACK=http://localhost:3000/linkedin
 ATENA_CRYPTO_SALT=W6v8Z5EUTYVrM
 ATENA_EXPIRE_TOKEN=20
+ROCKETCHAT_ONBOARDING_USER_ID=
+ROCKETCHAT_ONBOARDING_USER_TOKEN=
