--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "batchflow": "^0.4.0",
     "body-parser": "^1.18.3",
+    "bull": "^3.11.0",
     "compression": "^1.7.3",
     "config-yml": "^0.10.2",
     "cors": "^2.8.5",
