feat: profile achievement

--- a/config/achievements-network.yml
+++ b/config/achievements-network.yml
@@ -494,3 +494,24 @@ level:
       I: 9
       II: 10
     xp: 11
+profile:
+  linkedin_linked:
+    status: '20%'
+    medal: 'Bronze'
+    reputation: 5
+  location_and_phone_filled:
+    status: '40%'
+    medal: 'Prata'
+    reputation: 10
+  area_selected:
+    status: '60%'
+    medal: 'Ouro'
+    reputation: 10
+  area_details:
+    status: '80%'
+    medal: 'Platina'
+    reputation: 15
+  completed:
+    status: '100%'
+    medal: 'Diamante'
+    reputation: 20
