--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@ ROCKET_BOT_USER=
 ROCKET_BOT_PASS=
 ROCKET_USER_TOKEN=
 ROCKET_USER_ID=
+ROCKETCHAT_URL=
+ROCKETCHAT_USE_SSL=true
+ROCKET_SSL=true
+ROCKET_DEFAULT_CHANNEL=impulso-network
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_REPOSITORIES=
@@ -16,7 +20,6 @@ DISQUS_PUBLIC_KEY=
 DISQUS_CALLBACK_URL=
 DISQUS_SECRET_KEY=
 DISQUS_ACCESS_TOKEN=
-ROCKET_DEFAULT_CHANNEL=impulso-network
 CLOUDAMQP_APIKEY=
 CLOUDAMQP_URL=
 CLOUDMQP_QUEUE=atena.in
