--- a/config/achievements-network.yml
+++ b/config/achievements-network.yml
@@ -496,19 +496,15 @@ level:
     xp: 11
 profile:
   linkedin_linked:
-    status: '20%'
-    medal: 'Bronze'
-    reputation: 5
-  location_and_phone_filled:
-    status: '40%'
+    status: '25%'
     medal: 'Prata'
-    reputation: 10
-  area_selected:
-    status: '60%'
+    reputation: 5
+  stacks_filled:
+    status: '50%'
     medal: 'Ouro'
     reputation: 10
-  area_details:
-    status: '80%'
+  seniority_filled:
+    status: '75%'
     medal: 'Platina'
     reputation: 15
   completed:
