--- a/config/achievements-network.yml
+++ b/config/achievements-network.yml
@@ -495,7 +495,7 @@ level:
       II: 10
     xp: 11
 profile:
-  linkedin_linked:
+  recently_signedin:
     status: '25%'
     medal: 'Prata'
     reputation: 5
