--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "node": "8.11.4"
   },
   "dependencies": {
-    "@rocket.chat/sdk": "^0.2.9",
+    "@rocket.chat/sdk": "^0.2.9-2",
     "ajv": "6.5.3",
     "amqplib": "^0.5.3",
     "amqplib-as-promised": "^3.15.1",
