--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@rocket.chat/sdk": "^0.2.9-2",
+    "amqplib-as-promised": "^4.0.0",
+    "chalk": "^4.0.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "mongoose": "^5.9.2",
