--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@rocket.chat/sdk": "^0.2.9-2",
     "amqplib-as-promised": "^4.0.0",
+    "axios": "^0.19.2",
     "chalk": "^4.0.0",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "mongoose": "^5.9.2",
