--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "mongoose": "^5.9.2",
+    "node-cron": "^2.0.3",
     "pretty-error": "^2.1.1",
     "slack-notify": "^0.1.7"
   },
