--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "nodemon src/server.js",
     "dev:debug": "nodemon --inspect src/server.js",
+    "build": "sucrase ./src -d ./dist -t imports",
+    "start": "node dist/server.js",
     "test": "jest",
     "lint": "eslint ./"
   },
