--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
         "ecmaVersion": 2018,
         "sourceType": "module"
     },
+    "ignorePatterns": ["dist"],
     "rules": {
         "prettier/prettier": "error",
         "class-methods-use-this": "off",
