--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,40 +1,58 @@
 {
-    "env": {
-        "es6": true,
-        "node": true,
-        "jest": true
-    },
-    "extends": [
-        "standard", "prettier"
+  "env": {
+    "es6": true,
+    "node": true,
+    "jest": true
+  },
+  "extends": [
+    "standard",
+    "prettier"
+  ],
+  "plugins": [
+    "prettier",
+    "eslint-plugin-import-helpers"
+  ],
+  "globals": {
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly"
+  },
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module"
+  },
+  "ignorePatterns": [
+    "dist"
+  ],
+  "rules": {
+    "prettier/prettier": "error",
+    "class-methods-use-this": "off",
+    "no-param-reassign": "off",
+    "camelcase": "off",
+    "no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "next"
+      }
     ],
-    "plugins": ["prettier", "eslint-plugin-import-helpers"],
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
-    "parserOptions": {
-        "ecmaVersion": 2018,
-        "sourceType": "module"
-    },
-    "ignorePatterns": ["dist"],
-    "rules": {
-        "prettier/prettier": "error",
-        "class-methods-use-this": "off",
-        "no-param-reassign": "off",
-        "camelcase":"off",
-        "no-unused-vars":["error", {"argsIgnorePattern": "next"}],
-        "import/no-absolute-path": "off",
-        "import-helpers/order-imports": [
-          "warn",
-          {
-            "newlinesBetween": "always",
-            "groups": [
-              "module",
-              "/^@shared/",
-              ["parent", "sibling", "index"]
-            ],
-            "alphabetize": { "order": "asc", "ignoreCase": true }
-          }
-        ]
-    }
+    "import/no-absolute-path": "off",
+    "import-helpers/order-imports": [
+      "warn",
+      {
+        "newlinesBetween": "always",
+        "groups": [
+          "module",
+          "/^@shared/",
+          [
+            "parent",
+            "sibling",
+            "index"
+          ]
+        ],
+        "alphabetize": {
+          "order": "asc",
+          "ignoreCase": true
+        }
+      }
+    ]
+  }
 }
