chore: add queue

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,7 @@ NODE_ENV="development"
 
 PORT=4390
 
+REDIS_URL=""
 ROCKETCHAT_ADMIN_USER_ID=""
 ROCKETCHAT_ADMIN_USER_TOKEN=""
 ROCKETCHAT_PASSWORD=""
