chore: update .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
 AMQP_URL=""
-AMQP_BIND=""
-AMQP_QUEUE_IN=""
-AMQP_QUEUE_OUT=""
+ATENA_EXCHANGE=""
+
+ENLISTMENT_EXCHANGE=""
 
 DEFAULT_CHANNELS=""
+
+IMPULSER_APP_EXCHANGE=""
 
 MONGODB_URI="mongodb://localhost/atena-server"
 MONGODB_TEST_URI="mongodb://localhost/atena-test"
@@ -11,6 +13,9 @@ MONGODB_TEST_URI="mongodb://localhost/atena-test"
 NODE_ENV="development"
 
 PORT=4390
+
+QUEUE_FOR_ENLISTMENT=""
+QUEUE_FOR_IMPULSER_APP=""
 
 REDIS_URL=""
 ROCKETCHAT_ADMIN_USER_ID=""
