--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bull": "^3.14.0",
     "chalk": "^4.0.0",
     "cors": "^2.8.5",
+    "drip-nodejs": "^3.1.1",
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "mongoose": "^5.9.2",
