chore: drip job (#686)
* chore: drip job

* chore: add updatedAt

* chore: sleep 5 sec

* Update @types/jest to version 26.0.3 (#687)

Co-authored-by: depfu[bot] <23717796+depfu[bot]@users.noreply.github.com>

* Update babel-jest to version 26.1.0 (#685)

Co-authored-by: depfu[bot] <23717796+depfu[bot]@users.noreply.github.com>

* chore(deps): bump websocket-extensions from 0.1.3 to 0.1.4 (#683)

Bumps [websocket-extensions](https://github.com/faye/websocket-extensions-node) from 0.1.3 to 0.1.4.
- [Release notes](https://github.com/faye/websocket-extensions-node/releases)
- [Changelog](https://github.com/faye/websocket-extensions-node/blob/master/CHANGELOG.md)
- [Commits](https://github.com/faye/websocket-extensions-node/compare/0.1.3...0.1.4)

Signed-off-by: dependabot[bot] <support@github.com>

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* Update babel-jest to version 26.0.1 (#662)

Co-authored-by: depfu[bot] <23717796+depfu[bot]@users.noreply.github.com>
Co-authored-by: Márcio Vinícius Sena <marciosena.inf@gmail.com>
Co-authored-by: Renato Tarantelli <31748448+rtarantelli@users.noreply.github.com>
Co-authored-by: Julio Goncalves <31070014+thejullius@users.noreply.github.com>

* chore: update depfu

* chore: await position

* chore: job schedule

Co-authored-by: depfu[bot] <23717796+depfu[bot]@users.noreply.github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Márcio Vinícius Sena <marciosena.inf@gmail.com>
Co-authored-by: Renato Tarantelli <31748448+rtarantelli@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bull": "^3.14.0",
     "chalk": "^4.0.0",
     "cors": "^2.8.5",
+    "drip-nodejs": "^3.1.1",
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "mongoose": "^5.9.2",
@@ -32,9 +33,9 @@
   },
   "devDependencies": {
     "@sucrase/jest-plugin": "^2.0.0",
-    "@types/jest": "^25.1.4",
+    "@types/jest": "^26.0.3",
     "@types/mongoose": "^5.7.3",
-    "babel-jest": "^25.1.0",
+    "babel-jest": "^26.0.1",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-standard": "^14.1.1",
