fix: atena logs

--- a/.env.example
+++ b/.env.example
@@ -27,8 +27,7 @@ ROCKETCHAT_USE_SSL=true
 ROCKETCHAT_USER=""
 ROCKETCHAT_URL=""
 
-
-SLACK_CHANNEL=""
-SLACK_LOG=""
+SLACK_TOKEN=""
+SLACK_LOG_CHANNEL
 
 USERS_TO_INVITE=""
