--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^5.9.2",
     "node-cron": "^2.0.3",
     "pretty-error": "^2.1.1",
+    "slack": "^11.0.2",
     "slack-notify": "^0.1.7"
   },
   "devDependencies": {
