chore: add log lib

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,8 @@ ROCKETCHAT_USER=""
 ROCKETCHAT_URL=""
 
 SLACK_TOKEN=""
-SLACK_LOG_CHANNEL
+SLACK_LOG_CHANNEL=""
+SLACK_ICON_URL=""
+SLACK_USERNAME="atena-impulso"
 
 USERS_TO_INVITE=""
