feat: github info

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon src/server.js",
     "dev:debug": "nodemon --inspect src/server.js",
     "build": "sucrase ./src -d ./dist -t imports",
+    "checkUpdates": "yarn upgrade-interactive --latest",
     "start": "node dist/server.js",
     "test": "jest --detectOpenHandles",
     "lint": "eslint ./"
@@ -19,38 +20,38 @@
   "dependencies": {
     "@rocket.chat/sdk": "^0.2.9-2",
     "amqplib-as-promised": "^4.0.0",
-    "axios": "^0.19.2",
-    "bull": "^3.14.0",
+    "axios": "^0.20.0",
+    "bull": "^3.18.0",
     "chalk": "^4.0.0",
     "cors": "^2.8.5",
     "drip-nodejs": "^3.1.1",
     "express": "^4.17.1",
-    "log-on-slack": "^1.0.7",
-    "moment": "^2.24.0",
-    "mongoose": "^5.9.2",
+    "log-on-slack": "^1.0.8",
+    "moment": "^2.29.0",
+    "mongoose": "^5.10.6",
     "node-cron": "^2.0.3"
   },
   "devDependencies": {
     "@sucrase/jest-plugin": "^2.0.0",
-    "@types/jest": "^26.0.3",
-    "@types/mongoose": "^5.7.3",
-    "babel-jest": "^26.0.1",
-    "eslint": "^7.0.0",
+    "@types/jest": "^26.0.14",
+    "@types/mongoose": "^5.7.36",
+    "babel-jest": "^26.3.0",
+    "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-import-helpers": "^1.0.2",
-    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-import-helpers": "^1.1.0",
+    "eslint-plugin-jest": "^24.0.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "factory-girl": "^5.0.4",
-    "faker": "^4.1.0",
-    "husky": "^4.2.5",
-    "jest": "^25.1.0",
+    "faker": "^5.1.0",
+    "husky": "^4.3.0",
+    "jest": "^26.4.2",
     "nodemon": "^2.0.2",
-    "prettier": "^2.0.5",
+    "prettier": "^2.1.2",
     "sucrase": "^3.12.1",
     "supertest": "^4.0.2"
   }
