--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ IMPULSER_APP_EXCHANGE=""
 
 MONGODB_URI="mongodb://localhost/atena-server"
 MONGODB_TEST_URI="mongodb://localhost/atena-test"
+MINER_EXCHANGE="miner.out"
 
 NODE_ENV="development"
 
@@ -18,6 +19,7 @@ PORT=4390
 
 QUEUE_FOR_ENLISTMENT=""
 QUEUE_FOR_IMPULSER_APP=""
+QUEUR_FOR_MINER="miner.atena"
 
 REDIS_URL=""
 ROCKETCHAT_ADMIN_USER_ID=""
